@@ -1,6 +1,5 @@
 package com.rimo.sfcr.core;
 
-import com.mojang.blaze3d.vertex.PoseStack;
 import com.rimo.sfcr.Common;
 import com.rimo.sfcr.VersionUtil;
 import com.seibel.distanthorizons.api.DhApi;
@@ -11,19 +10,18 @@ import com.seibel.distanthorizons.api.objects.math.DhApiVec3d;
 import com.seibel.distanthorizons.api.objects.render.DhApiRenderableBox;
 import com.seibel.distanthorizons.api.objects.render.DhApiRenderableBoxGroupShading;
 import net.minecraft.client.Minecraft;
-import net.minecraft.client.multiplayer.ClientLevel;
+import net.minecraft.client.renderer.GameRenderer;
+import net.minecraft.client.renderer.MappableRingBuffer;
+import net.minecraft.util.Mth;
+import net.minecraft.world.attribute.EnvironmentAttributes;
+import net.minecraft.world.level.Level;
 import net.minecraft.world.phys.Vec3;
-//? if > 1.20 {
-import org.joml.Matrix4f;
-//? } else if ! 1.16.5 {
-/*import com.mojang.math.Matrix4f;
-*///? }
 
-import java.awt.*;
+import java.awt.Color;
 import java.util.ArrayList;
 import java.util.List;
 
-import static com.rimo.sfcr.Common.*;
+import static com.rimo.sfcr.Common.CONFIG;
 
 /* Some note:
 	DH official cloud renderer parse a picture to a renderableBoxGroup, then copy it 11*11 times as a cloud matrix,
@@ -33,14 +31,11 @@ import static com.rimo.sfcr.Common.*;
  */
 public class RendererDHCompat extends Renderer {
 	private final DhApiRenderableBoxGroupShading cloudShading = createCloudShading();
-	private CloudData data;
 	private IDhApiRenderableBoxGroup group;
-
-	private float cloudBlockWidth, cloudBlockHeight;
-	private double timeOffset;
-	private int cloudColor;
+	private float cloudHeight = 192.33F;
 
 	public RendererDHCompat() {}
+
 	public RendererDHCompat(Renderer renderer) {super(renderer);}
 
 	private DhApiRenderableBoxGroupShading createCloudShading() {
@@ -56,14 +51,14 @@ public class RendererDHCompat extends Renderer {
 	//Powered by Deepseek.ai
 	private List<DhApiRenderableBox> convertGridForm(boolean[][][] grid) {
 		int w = grid.length;
-		int h = grid[0].length;
-		boolean[][][] covered = new boolean[w][h][w];
+		int h = grid[0][0].length;
+		boolean[][][] covered = new boolean[w][w][h];
 		List<DhApiRenderableBox> result = new ArrayList<>();
-		cullStateShown = 0;
-		cullStateSkipped = 0;
+		debugBuiltCounter = 0;
+		debugCullCounter = 0;
 
-		for (int z = 0; z < w; z++) {
-			for (int y = 0; y < h; y++) {
+		for (int z = 0; z < h; z++) {  //note that z is height
+			for (int y = 0; y < w; y++) {
 				for (int x = 0; x < w; x++) {
 					if (grid[x][y][z] && !covered[x][y][z]) {
 						int xMin = x, xMax = x;
@@ -75,7 +70,7 @@ public class RendererDHCompat extends Renderer {
 							xMax++;
 						while (xMin - 1 >= 0 && grid[xMin - 1][y][z])  // X to left
 							xMin--;
-						while (yMax + 1 < h) {  // Y to down
+						while (yMax + 1 < w) {  // Y to down
 							boolean valid = true;
 							for (int i = xMin; i <= xMax; i++) {
 								if (!grid[i][yMax + 1][z]) {
@@ -97,7 +92,7 @@ public class RendererDHCompat extends Renderer {
 							if (valid) yMin--;
 							else break;
 						}
-						while (zMax + 1 < w) {  // Z to forward
+						while (zMax + 1 < h) {  // Z to forward
 							boolean valid = true;
 							for (int i = xMin; i <= xMax; i++) {
 								for (int j = yMin; j <= yMax; j++) {
@@ -139,18 +134,18 @@ public class RendererDHCompat extends Renderer {
 						result.add(new DhApiRenderableBox(
 								new DhApiVec3d(
 										(xMin - w / 2) * cloudBlockWidth,  //offset to center
-										yMin * cloudBlockHeight,
-										(zMin - w / 2) * cloudBlockWidth
+										zMin * cloudBlockHeight,
+										(yMin - w / 2) * cloudBlockWidth
 								),
 								new DhApiVec3d(
 										(++xMax - w / 2) * cloudBlockWidth,  //++at least one block size
-										++yMax * cloudBlockHeight,
-										(++zMax - w / 2) * cloudBlockWidth
+										++zMax * cloudBlockHeight,
+										(++yMax - w / 2) * cloudBlockWidth
 								),
 								new Color(255,255,255,255),  //color change by time, here just placeholder
 								EDhApiBlockMaterial.UNKNOWN
 						));
-						cullStateShown ++;
+						debugBuiltCounter ++;
 					}
 				}
 			}
@@ -158,115 +153,22 @@ public class RendererDHCompat extends Renderer {
 		return result;
 	}
 
-//	/** TODO: It's still have z-fight issue if we allowed alpha, meaningless...
-//	 * An imitation of {@link CloudData#buildMesh}
-//	 */
-//	private List<DhApiRenderableBox> getVisibleBoxGroupFrom(CloudData data) {
-//		List<DhApiRenderableBox> group = new ArrayList<>();
-//		int cy = data.gridYFromClouds;
-//		if (cy >= 0 && cy < data.height) {
-//			int cx = data.width / 2;
-//			if (data._cloudData[cx][cy][cx])  //build an inner box then return;
-//				group.add(new DhApiRenderableBox(
-//						new DhApiVec3d(
-//								cx * cloudBlockWidth,
-//								cy * cloudBlockHeight,
-//								cx * cloudBlockWidth
-//						),
-//						new DhApiVec3d(
-//								(cx + 1) * cloudBlockWidth,
-//								(cy + 1) * cloudBlockHeight,
-//								(cx + 1) * cloudBlockWidth
-//						),
-//						new Color(0),
-//						EDhApiBlockMaterial.UNKNOWN
-//				));
-//			return group;
-//		}
-//
-//		int renderDistance = data.width / 2;
-//		for (int l = 0; l <= 2 * renderDistance; ++l) {
-//			for (int xOffset = - l; xOffset <= l; ++xOffset) {
-//				int zOffset = l - Math.abs(xOffset);
-//				// circular-like culling...
-//				if (zOffset >= 0 && zOffset <= renderDistance && xOffset * xOffset + zOffset * zOffset <= renderDistance * renderDistance) {
-//					if (zOffset != 0)
-//				}
-//			}
-//		}
-//		return group;
-//	}
-
-	//update cloud invoked by mixin (instead of manual call in 2.0)
-	@Override
-	//? if = 1.16.5 {
-	/*public void render(PoseStack poseStack, float tickDelta, double cameraX, double cameraY, double cameraZ,
-	*///? } else if < 1.21.1 {
-	/*public void render(PoseStack poseStack, Matrix4f projectionMatrix, float tickDelta, double cameraX, double cameraY, double cameraZ,
-	*///? } else {
-	public void render(PoseStack poseStack, Matrix4f projectionMatrix, Matrix4f matrix4f2, float tickDelta, double cameraX, double cameraY, double cameraZ,
-	//? }
-	                   ClientLevel level) {
-		float cloudHeight = level.effects().getCloudHeight();
-		if (Float.isNaN(cloudHeight))
-			return;
-		int configHeight = CONFIG.getCloudHeight();
-		if (configHeight >= 0)
-			cloudHeight = configHeight;
-		this.cloudHeight = cloudHeight;
-
-		//vanilla cloud pos calculation
-		final float CLOUD_BLOCK_WIDTH = CONFIG.getCloudBlockSize();  //cloud size
-		final float CLOUD_BLOCK_HEIGHT = CLOUD_BLOCK_WIDTH / 2F;
-		double timeOffset = (level.getGameTime() + tickDelta) * 0.03F;
-		double cloudX = (cameraX + timeOffset) / CLOUD_BLOCK_WIDTH;  //grid pos where to draw cloud layer
-		double cloudY = cloudHeight - (float) cameraY + 0.33F;
-		double cloudZ = cameraZ / CLOUD_BLOCK_WIDTH + 0.33F;
-		int GridX = (int) Math.floor(cloudX);  //cloud grid pos !!NOTICE that timeOffset is already contained.
-		int GridY = (int) Math.floor(cloudY / CLOUD_BLOCK_HEIGHT);
-		int GridZ = (int) Math.floor(cloudZ);
-		Vec3 cloudColor = level.getCloudColor(tickDelta);
-
-		cloudColor = getBrightMultiplier(cloudColor);
-
-		//refresh check
-		resamplingTimer += VersionUtil.getLastFrameDuration() * 0.25 * 0.25;
-		if (! Minecraft.getInstance().isPaused() && ! isResampling &&
-				(resamplingTimer > DATA.getResamplingInterval() || oldGridX != GridX || oldGridZ != GridZ)) {
-			isResampling = true;
-			resamplingTimer = 0.0;
-			resamplingThread = new Thread(() -> {  //start data refresh thread
-				try {
-					collectCloudData(GridX, GridY, GridZ);
-				} catch (Exception e) {
-					exceptionCatcher(e);
-				} finally {
-					oldGridX = GridX;
-					oldGridZ = GridZ;
-					isResampling = false;
-				}
-			});
-			resamplingThread.start();
-		}
-
-		this.cloudBlockHeight = CLOUD_BLOCK_HEIGHT;
-		this.cloudBlockWidth = CLOUD_BLOCK_WIDTH;
-		this.timeOffset = timeOffset;
-		if (CONFIG.isEnableDuskBlush())  //apply dawn/dusk blush
-			cloudColor = cloudColor.multiply(getBlushColorByTime(level.getDayTime()));
-		this.cloudColor = new Color((float) cloudColor.x, (float) cloudColor.y, (float) cloudColor.z, 1F).getRGB();
-	}
-
 	//add RenderableBoxGroup build and replace.
 	@Override
-	protected void collectCloudData(int x, int y, int z) {
-		CloudData newData = new CloudData(x, y, z, DATA.densityByWeather, DATA.densityByBiome);
-		if (!DhApi.Delayed.configs.graphics().renderingEnabled().getValue())
-			return;  //save battery if DH render was disabled.
+	protected void updateCloudGrid(int renderRange) {
+		CloudGrid newGrid = getCloudGrid(gridX, gridZ, renderRange);
+		if (newGrid == null)
+			return;
+		if (cloudGrid != null) {
+			int oldOffset = Math.abs(gridX - cloudGrid.centerX()) + Math.abs(gridZ - cloudGrid.centerZ());
+			int newOffset = Math.abs(gridX - newGrid.centerX()) + Math.abs(gridZ - newGrid.centerZ());
+			if (newOffset > oldOffset)
+				return;  //pick grids closer to player
+		}
 		IDhApiRenderableBoxGroup newGroup = DhApi.Delayed.customRenderObjectFactory.createRelativePositionedGroup(
 				Common.MOD_ID + ":clouds",
 				new DhApiVec3d(0, 0, 0),
-				convertGridForm(newData._cloudData)
+				convertGridForm(newGrid.grids())
 		);
 		newGroup.setBlockLight(15);
 		newGroup.setSkyLight(15);
@@ -278,34 +180,75 @@ public class RendererDHCompat extends Renderer {
 			if (group != null)
 				renderRegister.remove(group.getId());  //clear old group
 			renderRegister.add(newGroup);
+			cloudGrid = newGrid;
 			group = newGroup;
-			data = newData;
-			cullStateShown = group.size();
 		}
 	}
 
 	@Override
 	public void stop() {
 		super.stop();
-		if (group != null && DhApi.Delayed.worldProxy.worldLoaded()) {
-			DhApi.Delayed.worldProxy.getSinglePlayerLevel().getRenderRegister().remove(group.getId());
+		if (group != null) {
+			try {
+				DhApi.Delayed.worldProxy.getSinglePlayerLevel().getRenderRegister().remove(group.getId());
+			} catch (IllegalStateException e) {
+				//
+			}
 			group = null;
 		}
 	}
 
-	@Override
-	public boolean isCloudCovered(double x, double y, double z) {
-		return data != null && data.isCloudCovered(x + xOffset, y, z + zOffset);
-	}
-
-	// Below we rewrite 2 method from
+	// Below we rewrite method from
 	// com.seibel.distanthorizons.core.render.renderer.generic.CloudRenderHandler
 
 	//rewrite of original constructor (more likes entire delete?)
-	//update check by mixin vanilla call, so yep, we delete it completely XD
+	//to dynamic build cloud RenderableBoxGroup, we replaced picture parse to grid convertor,
+	//and move it to thread-ify method updateCloudGrid
+	@Override
+	public void render(int cloudColor, float cloudHeight, Vec3 camPos, float partialTick, MappableRingBuffer infoBuffer, MappableRingBuffer faceBuffer, int renderRange, Level level) {
+		if (!DhApi.Delayed.configs.graphics().renderingEnabled().getValue())
+			return;  //save battery if DH render was disabled.
 
-	//to calc RenderableBoxGroup pos and culling, etc..
+//		float offsetY = (float)((double)cloudHeight - camPos.y);
+//		int gridY = Mth.floor(offsetY / cloudHeight);
+
+		float timeOffset = level.getGameTime() + partialTick;
+		double cloudX = camPos.x + timeOffset * 0.030000001F;
+		double cloudZ = camPos.z + 3.96F;
+		cloudBlockWidth = CONFIG.getCloudBlockSize();
+		cloudBlockHeight = cloudBlockWidth / 2;
+		int gridX = Mth.floor(cloudX / cloudBlockWidth);
+		int gridZ = Mth.floor(cloudZ / cloudBlockWidth);
+		float offsetX = (float)(cloudX - (double)((float)gridX * cloudBlockWidth));
+		float offsetZ = (float)(cloudZ - (double)((float)gridZ * cloudBlockWidth));
+
+		renderRange *= CONFIG.getDhRenderRangeMultiplier();
+		this.cloudHeight = cloudHeight;
+		this.xOffset = offsetX;
+		this.zOffset = offsetZ;
+
+		resamplingTimer += VersionUtil.getLastFrameDuration() * 0.25 * 0.25;
+		if (! Minecraft.getInstance().isPaused() && (gridX != this.gridX || gridZ != this.gridZ || isTimeToResampling())) {
+			resamplingTimer = 0;
+			this.gridX = gridX;
+			this.gridZ = gridZ;
+			if (cloudGrid == null) {
+				updateCloudGrid(renderRange);  //resampling directly at first time
+			} else {
+				tryStartGridUpdateThread(renderRange);
+			}
+		}
+	}
+
+	//to calc RenderableBoxGroup pos and culling, etc...
 	private void preRender(IDhApiRenderableBoxGroup group) {
+		Level level = Minecraft.getInstance().level;
+		if (level == null)
+			return;
+		GameRenderer gameRenderer = Minecraft.getInstance().gameRenderer;
+		Vec3 cameraPos = gameRenderer.getMainCamera().position();
+		float offsetX = xOffset + (gridX - cloudGrid.centerX()) * cloudBlockWidth;
+		float offsetZ = zOffset + (gridZ - cloudGrid.centerZ()) * cloudBlockWidth;
 
 		/* TODO: culling?
 		    but we have only one group. considering is unnecessary..
@@ -313,28 +256,18 @@ public class RendererDHCompat extends Renderer {
 		 */
 
 		//color
-		if (! group.isEmpty()) {
-			Color color = new Color(cloudColor, true);
-			if (! group.get(0).color.equals(color)) {
+		if (!group.isEmpty()) {
+			int iColor = gameRenderer.getMainCamera().attributeProbe().getValue(EnvironmentAttributes.CLOUD_COLOR, VersionUtil.getLastFrameDuration());
+			Color color = new Color(iColor);
+			if (!group.getFirst().color.equals(color)) {
 				for (DhApiRenderableBox box : group)
 					box.color = color;
 				group.triggerBoxChange();
 			}
 		}
 
-		//pos
-		Vec3 cameraPos = Minecraft.getInstance().gameRenderer.getMainCamera().getPosition();
-		double xOffsetInGrid = (cameraPos.x() + timeOffset) / cloudBlockWidth - oldGridX;
-		double zOffsetInGrid = cameraPos.z() / cloudBlockWidth + 0.33F - oldGridZ;
-		xOffsetInGrid *= cloudBlockWidth;  //turns to blocks
-		zOffsetInGrid *= cloudBlockWidth;
-		xOffset = xOffsetInGrid - 0.33F * cloudBlockWidth;
-		zOffset = zOffsetInGrid - 0.33F * cloudBlockWidth;
-		/* Suddenly I realized that there should be simply "cameraPos - offset" ...
-		 * W T F to my brain (╯‵□′)╯︵┻━┻ */
-		double cloudX = cameraPos.x() - xOffsetInGrid;
-		double cloudZ = cameraPos.z() - zOffsetInGrid;
-		double cloudY = getCloudHeight() + 0.33F;
-		group.setOriginBlockPos(new DhApiVec3d(cloudX, cloudY, cloudZ));
+		//TODO: why cloudHeight is follow by player?
+		//simply 'cameraPos - offset'...
+		group.setOriginBlockPos(new DhApiVec3d(cameraPos.x() - offsetX, cloudHeight, cameraPos.z() - offsetZ));
 	}
 }
